--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -48,7 +48,7 @@
 
     <Button
         android:id="@+id/button1"
-        android:text="@string/labelRed"
+        android:text="Pause"
         android:textColor="@color/red"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
@@ -56,7 +56,7 @@
 
     <Button
         android:id="@+id/button2"
-        android:text="@string/labelGreen"
+        android:text="Resume"
         android:textColor="@color/green"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
